[package]
name = "repl"
version = "0.1.0"
authors = ["mac <mac@impero.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
maplit = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
chrono-tz = "0.5"
#hmac = "0.11.0"
#rust-crypto = "^0.2"
hmac-sha1 = "^0.1"
openidconnect = "2.0.2"